[fix] merch items cards overlapping

--- a/css_components/home/card.css
+++ b/css_components/home/card.css
@@ -21,7 +21,7 @@
 
 .cards-grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
     gap: 1rem;
 }
 
